# back/static/swagger.json
@@ -11,6 +11,10 @@
   ],
   "components": {
     "securitySchemes": {
+      "noauthAuth": {
+        "type": "http",
+        "scheme": "noauth"
+      },
       "bearerAuth": {
         "type": "http",
         "scheme": "bearer"
@@ -22,13 +26,13 @@
       "name": "User"
     },
     {
-      "name": "admin"
-    },
-    {
-      "name": "job"
-    },
-    {
       "name": "connection"
+    },
+    {
+      "name": "message"
+    },
+    {
+      "name": "Storie"
     }
   ],
   "paths": {
@@ -37,7 +41,7 @@
         "tags": [
           "User"
         ],
-        "summary": "Get users (admin)",
+        "summary": "Get users",
         "security": [
           {
             "bearerAuth": []
@@ -63,10 +67,9 @@
               "schema": {
                 "type": "object",
                 "example": {
-                  "name": "string",
-                  "companie": "string",
-                  "email": "email",
-                  "password": "string"
+                  "pseudo": "julien",
+                  "email": "julien",
+                  "password": "julien"
                 }
               }
             }
@@ -85,7 +88,7 @@
         "tags": [
           "User"
         ],
-        "summary": "Edit user",
+        "summary": "Edit user (conn)",
         "security": [
           {
             "bearerAuth": []
@@ -97,10 +100,9 @@
               "schema": {
                 "type": "object",
                 "example": {
-                  "name": "string",
-                  "companie": "string",
-                  "email": "string",
-                  "pasword": "string"
+                  "pseudo": "julien2",
+                  "email": "julien",
+                  "password": "julien"
                 }
               }
             }
@@ -119,7 +121,7 @@
         "tags": [
           "User"
         ],
-        "summary": "delete user",
+        "summary": "delete user (conn)",
         "security": [
           {
             "bearerAuth": []
@@ -140,238 +142,10 @@
         "tags": [
           "User"
         ],
-        "summary": "Get me",
+        "summary": "Get me (conn)",
         "security": [
           {
             "bearerAuth": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {}
-            }
-          }
-        }
-      }
-    },
-    "/admin/{id}": {
-      "delete": {
-        "tags": [
-          "admin"
-        ],
-        "summary": "delete user",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "schema": {
-              "type": "integer"
-            },
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {}
-            }
-          }
-        }
-      },
-      "put": {
-        "tags": [
-          "admin"
-        ],
-        "summary": "Edit user",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "example": {
-                  "name": "string",
-                  "companie": "string",
-                  "email": "email",
-                  "password": "string",
-                  "role": "string"
-                }
-              }
-            }
-          }
-        },
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "schema": {
-              "type": "string"
-            },
-            "required": true
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {}
-            }
-          }
-        }
-      }
-    },
-    "/job": {
-      "get": {
-        "tags": [
-          "job"
-        ],
-        "summary": "get jobs",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {}
-            }
-          }
-        }
-      },
-      "post": {
-        "tags": [
-          "job"
-        ],
-        "summary": "create jobs",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "type": "object",
-                "example": {
-                  "repo": "https://github.com/SoRedCrazy/projecthotel-4CITE.git",
-                  "images": "python:3.9-slim-buster",
-                  "commands": [
-                    "echo hello",
-                    "ls -a"
-                  ]
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {}
-            }
-          }
-        }
-      }
-    },
-    "/download/{file}": {
-      "get": {
-        "tags": [
-          "job"
-        ],
-        "summary": "downloads logs",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "in": "path",
-            "name": "file",
-            "description": "Chemin vers le fichier à télécharger.",
-            "required": true,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK",
-            "content": {
-              "application/octet-stream": {
-                "schema": {
-                  "type": "string",
-                  "format": "binary"
-                }
-              }
-            }
-          },
-          "404": {
-            "description": "Fichier non trouvé"
-          },
-          "500": {
-            "description": "Erreur interne du serveur"
-          }
-        }
-      }
-    },
-    "/users/job": {
-      "get": {
-        "tags": [
-          "job"
-        ],
-        "summary": "get my job",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "Successful response",
-            "content": {
-              "application/json": {}
-            }
-          }
-        }
-      }
-    },
-    "/job/{id}": {
-      "delete": {
-        "tags": [
-          "job"
-        ],
-        "summary": "Delete (admin)",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "schema": {
-              "type": "integer"
-            },
-            "required": true
           }
         ],
         "responses": {
@@ -396,8 +170,8 @@
               "schema": {
                 "type": "object",
                 "example": {
-                  "email": "string",
-                  "password": "string"
+                  "email": "julien",
+                  "password": "julien"
                 }
               }
             }
@@ -424,6 +198,258 @@
             "bearerAuth": []
           }
         ],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "example": ""
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      }
+    },
+    "/conversation": {
+      "get": {
+        "tags": [
+          "message"
+        ],
+        "summary": "coversation",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      }
+    },
+    "/message": {
+      "post": {
+        "tags": [
+          "message"
+        ],
+        "summary": "message",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "image": {
+                    "type": "string",
+                    "format": "binary",
+                    "description": "Image file"
+                  },
+                  "message": {
+                    "type": "string",
+                    "description": "message"
+                  },
+                  "receiver": {
+                    "type": "integer",
+                    "description": "user receiver"
+                  }
+                },
+                "required": [
+                  "receiver"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      }
+    },
+    "/message/{id}": {
+      "get": {
+        "tags": [
+          "message"
+        ],
+        "summary": "message",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      },
+      "delete": {
+        "tags": [
+          "message"
+        ],
+        "summary": "message",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      }
+    },
+    "/stories": {
+      "get": {
+        "tags": [
+          "Storie"
+        ],
+        "summary": "Storie",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      },
+      "post": {
+        "tags": [
+          "Storie"
+        ],
+        "summary": "Storie",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "multipart/form-data": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "image": {
+                    "type": "string",
+                    "format": "binary",
+                    "description": "Image file"
+                  },
+                  "location": {
+                    "type": "string",
+                    "description": "Location of the story"
+                  }
+                },
+                "required": [
+                  "image",
+                  "location"
+                ]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      }
+    },
+    "/stories/{id}": {
+      "delete": {
+        "tags": [
+          "Storie"
+        ],
+        "summary": "Storie",
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "schema": {
+              "type": "integer"
+            },
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Successful response",
+            "content": {
+              "application/json": {}
+            }
+          }
+        }
+      }
+    },
+    "/": {
+      "get": {
+        "tags": [
+          "default"
+        ],
+        "summary": "create db",
         "responses": {
           "200": {
             "description": "Successful response",
